<resources>
    <string name="app_name">MyRecipesTrackers</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_name">Add name</string>
    <string name="search">Search...</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition">Nutrition</string>
    <string name="recipe_minerals">Minerals</string>
    <string name="recipe_tags">Tags</string>
    <string name="label_recipe_list">RecipeList</string>
    <string name="label_recipe_detail">Recipe Detail</string>
    <string name="label_saved_fragment">Saved Recipes</string>
    <string name="recipe_name">Name: </string>
    <string name="url">Url: </string>
    <string name="calories">Calories: </string>
    <string name="volume">Volume: </string>
    <string name="time">Time: </string>
    <string name="go_to_source">Go to source: </string>
    <string name="label_search_fragment">Search</string>
    <string name="calendar_fragment">Calendar</string>
    <string name="link">Link</string>
</resources>
