<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_name"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/add_name_text"
        app:layout_constraintStart_toStartOf="@id/add_name_text" />

    <TextView
        android:id="@+id/add_ingredients_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/add_ingredients"
        app:layout_constraintStart_toStartOf="@id/add_name"
        app:layout_constraintTop_toBottomOf="@id/add_name" />

    <EditText
        android:id="@+id/add_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/add_ingredients_text"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients_text" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok_button"
        app:layout_constraintStart_toStartOf="@id/add_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintTop_toTopOf="@+id/add_button" />

</androidx.constraintlayout.ConstraintLayout>