<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@+id/recipesListFragment">

    <fragment
        android:id="@+id/recipesListFragment"
        android:name="com.example.artka.myrecipestrackers.ui.fragments.RecipeListFragment"
        android:label="@string/label_recipe_list"
        tools:layout="@layout/recipe_fragment_list">

        <action
            android:id="@+id/action_list_to_detail"
            app:destination="@id/recipeDetailFragment"
            app:enterAnim="@anim/enter_slide_down"
            app:exitAnim="@anim/exit_slide_down"
            app:popEnterAnim="@anim/pop_enter_slide_up"
            app:popExitAnim="@anim/pop_exit_slide_up" />

        <action
            android:id="@+id/action_list_to_saved"
            app:destination="@id/recipeSavedFragment"
            app:enterAnim="@anim/enter_slide_down"
            app:exitAnim="@anim/exit_slide_down"
            app:popEnterAnim="@anim/pop_enter_slide_up"
            app:popExitAnim="@anim/pop_exit_slide_up" />
    </fragment>

    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.example.artka.myrecipestrackers.ui.fragments.RecipeDetailFragment"
        android:label="@string/label_recipe_detail"
        tools:layout="@layout/recipe_fragment_detail">
    <action
        android:id="@+id/action_detail_to_webview"
        app:destination="@id/webViewFragment"
        app:enterAnim="@anim/enter_slide_down"
        app:exitAnim="@anim/exit_slide_down"
        app:popEnterAnim="@anim/pop_enter_slide_up"
        app:popExitAnim="@anim/pop_exit_slide_up" />
    </fragment>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.example.artka.myrecipestrackers.ui.fragments.WebViewFragment"
        android:label="@string/label_recipe_detail"
        tools:layout="@layout/webview_fragment">

    </fragment>

    <fragment
        android:id="@+id/recipeSavedFragment"
        android:name="com.example.artka.myrecipestrackers.ui.fragments.SavedRecipesFragment"
        android:label="@string/label_saved_fragment"
        tools:layout="@layout/saved_recipes_fragment">
        <action
            android:id="@+id/action_saved_to_detail"
            app:destination="@+id/recipeDetailFragment"
            app:enterAnim="@anim/enter_slide_down"
            app:exitAnim="@anim/exit_slide_down"
            app:popEnterAnim="@anim/pop_enter_slide_up"
            app:popExitAnim="@anim/pop_exit_slide_up" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.artka.myrecipestrackers.ui.fragments.CalendarFragment"
        android:label="@string/calendar_fragment"
        tools:layout="@layout/calendar_fragment">

    </fragment>
</navigation>