<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.artka.myrecipestrackers.viewmodels.SharedViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_detail_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:imageUrl="@{viewModel.getRecipeModel().image}" />

        <TextView
            android:id="@+id/recipe_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@{`Name: ` + viewModel.getRecipeModel().label}" />

        <TextView
            android:id="@+id/recipe_site_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{`URL: ` + viewModel.getRecipeModel().url}"
            android:onClick="@{(v) -> viewModel.getButtonClicked(v)}"
            android:tag="recipe_url"/>

        <TextView
            android:id="@+id/recipe_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{`Calories: ` + String.valueOf(viewModel.getRecipeModel().calories)}" />

        <TextView
            android:id="@+id/recipe_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{`Volume: ` + String.valueOf(viewModel.getRecipeModel().totalWeight)}"/>

        <TextView
            android:id="@+id/recipe_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{`Time: ` + String.valueOf(viewModel.getRecipeModel().totalTime)}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ingredients_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{(v) -> viewModel.getButtonClicked(v)}"
                android:tag="ingredients_text"
                android:text="@string/ingredients" />

            <Button
                android:id="@+id/basic_nutrition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{(v) -> viewModel.getButtonClicked(v)}"
                android:text="@string/nutrition" />

            <Button
                android:id="@+id/mineral_nutrion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{(v) -> viewModel.getButtonClicked(v)}"
                android:tag=""
                android:text="@string/recipe_minerals" />

            <Button
                android:id="@+id/recipe_tags"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{(v) -> viewModel.getButtonClicked(v)}"
                android:tag="recipe_tags"
                android:text="@string/recipe_tags" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:adapter="@{viewModel.getRecipeDetailAdapter()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </LinearLayout>
</layout>