<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.artka.myrecipestrackers.utils.Converters" />

        <variable
            name="viewModel"
            type="com.example.artka.myrecipestrackers.models.RecipeListModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:transitionName="recipeImage"
                android:background="@drawable/recipe_list_item_placeholder"
                app:imageUrl="@{viewModel.getRecipeModel().image}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/recipe_name"
                style="@style/ListTextStyle"
                android:text="@string/recipe_name"
                app:layout_constraintLeft_toRightOf="@id/recipe_image"
                app:layout_constraintStart_toEndOf="@id/recipe_image"
                app:layout_constraintTop_toTopOf="@+id/recipe_image" />

            <TextView
                android:id="@+id/recipe_name_text"
                style="@style/ListDescriptionStyle"
                android:text="@{viewModel.getRecipeModel().label}"
                app:layout_constraintStart_toEndOf="@+id/recipe_name"
                app:layout_constraintTop_toTopOf="@+id/recipe_name"
                tools:text="Recipe Name" />


            <TextView
                android:id="@+id/recipe_calories"
                style="@style/ListTextStyle"
                android:text="@string/calories"
                app:layout_constraintLeft_toRightOf="@id/recipe_image"
                app:layout_constraintStart_toEndOf="@id/recipe_image"
                app:layout_constraintTop_toBottomOf="@+id/recipe_name_text"
                tools:text="Calories" />

            <TextView
                android:id="@+id/recipe_calories_text"
                style="@style/ListDescriptionStyle"
                android:text="@{Converters.getFormattedCalories(viewModel.getRecipeModel().calories)}"
                app:layout_constraintStart_toEndOf="@+id/recipe_calories"
                app:layout_constraintTop_toTopOf="@+id/recipe_calories"
                tools:text="Recipe Calories" />

            <TextView
                android:id="@+id/recipe_weight"
                style="@style/ListTextStyle"
                android:text="@string/volume"
                app:layout_constraintLeft_toRightOf="@id/recipe_image"
                app:layout_constraintStart_toEndOf="@id/recipe_image"
                app:layout_constraintTop_toBottomOf="@+id/recipe_calories"
                tools:text="Volume" />

            <TextView
                android:id="@+id/recipe_weight_text"
                style="@style/ListDescriptionStyle"
                android:text="@{Converters.getFormattedWeight(viewModel.getRecipeModel().totalWeight)}"
                app:layout_constraintStart_toEndOf="@+id/recipe_weight"
                app:layout_constraintTop_toTopOf="@+id/recipe_weight"
                tools:text="Recipe Volume" />

            <TextView
                android:id="@+id/recipe_time"
                style="@style/ListTextStyle"
                android:text="@string/time"
                app:layout_constraintLeft_toRightOf="@id/recipe_image"
                app:layout_constraintStart_toEndOf="@id/recipe_image"
                app:layout_constraintTop_toBottomOf="@+id/recipe_weight"
                tools:text="Time:" />

            <TextView
                android:id="@+id/recipe_time_text"
                style="@style/ListDescriptionStyle"
                android:text="@{Converters.getFormattedTime(viewModel.getRecipeModel().totalTime)}"
                app:layout_constraintStart_toEndOf="@+id/recipe_time"
                app:layout_constraintTop_toTopOf="@+id/recipe_time"
                tools:text="Recipe Time" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>